done some of the activity needs to finish the rest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">JustFood</string>
+    <string name="app_name_profile">Profile Details</string>
     <string-array name="country_no">
         <item>United Kingdom</item>
         <item>United States</item>
